<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/secondary_yellow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/name"
        android:textSize="20sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/main_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/urgentStatusImage"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/secondary_yellow"
        app:layout_constraintStart_toEndOf="@+id/nameTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/input_field"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/urgentStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/urgent_status"
        android:textColor="@color/secondary_dark"
        android:textSize="12sp"
        android:letterSpacing=".1"
        app:layout_constraintStart_toEndOf="@+id/urgentStatusImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/inter_regular"
        android:letterSpacing=".1"
        android:text="@string/date"
        android:textColor="@color/secondary_dark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/inter_medium"
        android:letterSpacing=".1"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/main_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

    <TextView
        android:id="@+id/assignedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/inter_bold"
        android:letterSpacing=".1"
        android:text="@string/assigned_to"
        android:textColor="@color/secondary_dark"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageTextView" />

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@color/secondary_yellow"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/edit_button"
        android:importantForAccessibility="no" />

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/secondary_yellow"
        android:importantForAccessibility="no"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/delete_button" />

</androidx.constraintlayout.widget.ConstraintLayout>