<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:background="@color/white"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        android:importantForAccessibility="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/inter_regular"
        android:letterSpacing=".2"
        android:text="@string/back"
        android:textColor="@color/main_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/joinIDTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:elevation="0.1dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/notebook_code"
        android:textAlignment="center"
        android:textColor="@color/main_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationY="-14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinIDTextView"
        app:srcCompat="@drawable/underline"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/inter_regular"
        android:textColor="@color/main_dark"
        android:letterSpacing=".3"
        android:textSize="20sp"
        android:text="delete a note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinIDTextView"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/dialogBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/inter_regular"
            android:text="You are going to delete the following note"
            android:textAlignment="center"
            android:textColor="@color/main_dark"
            android:textSize="24sp"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="152dp">


            <RelativeLayout
                android:id="@+id/cancelButton"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:paddingStart="6dp"
                android:paddingTop="8dp"
                android:paddingEnd="0dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:background="@color/white"

                    android:importantForAccessibility="no"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/cancel_button" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/cancel"
                    android:textAlignment="center"
                    android:textColor="@color/main_dark"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/confirmButton"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:paddingStart="6dp"
                android:paddingTop="8dp"
                android:paddingEnd="0dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:background="@color/white"

                    android:importantForAccessibility="no"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/confirm_button" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/confirm"
                    android:textAlignment="center"
                    android:textColor="@color/main_dark"
                    android:textSize="20sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:scaleType="fitCenter"
        android:background="@color/white"
        android:elevation="0.1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogBox"
        app:srcCompat="@drawable/top_left_radius"
        android:importantForAccessibility="no" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:elevation="0.1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogBox"
        app:srcCompat="@drawable/top_right_radius"
        android:importantForAccessibility="no" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="@color/secondary_yellow"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogBox"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_marginStart="32dp"
            android:layout_marginTop="56dp"

            android:fontFamily="@font/inter_bold"
            android:text="@string/name"
            android:textColor="@color/main_dark"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/urgentStatusImage"
            android:layout_width="16dp"
            android:layout_height="16dp"

            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"

            android:layout_toEndOf="@+id/nameTextView"
            android:backgroundTint="@color/secondary_yellow"

            android:importantForAccessibility="no"
            app:srcCompat="@drawable/input_field" />

        <TextView
            android:id="@+id/urgentStatusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="62dp"
            android:layout_toEndOf="@+id/urgentStatusImage"
            android:fontFamily="@font/inter_bold"
            android:letterSpacing=".1"
            android:text="@string/urgent_status"
            android:textColor="@color/secondary_dark"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/urgentStatusImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameTextView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/inter_regular"
            android:letterSpacing=".1"
            android:text="@string/date"
            android:textColor="@color/secondary_dark"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

        <TextView
            android:id="@+id/bodyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dateTextView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/inter_medium"
            android:letterSpacing=".1"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/main_dark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

        <TextView
            android:id="@+id/assignedTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bodyTextView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/inter_bold"
            android:letterSpacing=".1"
            android:text="@string/assigned_to"
            android:textColor="@color/secondary_dark"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bodyTextView" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>